syntax = "proto3";

package kessel.relations.v1;

import "google/api/annotations.proto";

option go_package = "github.com/project-kessel/relations-api/api/health/v1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.relations.v1";

service KesselHealth {
	rpc GetLivez (GetLivezRequest) returns (GetLivezReply){
		option (google.api.http) = {
			get: "/livez"
		};
	};
	rpc GetReadyz (GetReadyzRequest) returns (GetReadyzReply){
		option (google.api.http) = {
			get: "/readyz"
		};
	};
}

message GetLivezRequest {}
message GetLivezReply {
	string status = 1;
	uint32 code = 2;
}

message GetReadyzRequest {}
message GetReadyzReply {
	string status = 1;
	uint32 code = 2;
}
